@@ -1,3 +1,13 @@
+2015-09-14  Niels Möller  <nisse@lysator.liu.se>
+
+	* rsa-sign-tr.c (rsa_compute_root_tr): New file and function.
+	* rsa.h: Declare it.
+	* rsa-pkcs1-sign-tr.c (rsa_pkcs1_sign_tr): Use rsa_compute_root_tr.
+	(rsa_verify_res): Deleted, replaced by rsa_compute_root_tr.
+	* testsuite/rsa-sign-tr-test.c (test_rsa_sign_tr): Check that
+	signature argument is unchanged on failure.
+	* Makefile.in (hogweed_SOURCES): Added rsa-sign-tr.c.
+
 2015-09-07  Niels Möller  <nisse@lysator.liu.se>
 
 	* testsuite/rsa-sign-tr-test.c: Drop include of nettle-internal.h.
